samples/_failures_safe/1761002490_738e3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f88f9bb.c: In function ‘pointcloud_free’:
./samples/SAFE/__tmp_6f88f9bb.c:122:5: error: expected declaration or statement at end of input
  122 |     pc->count = 0;
      |     ^~
